# webgecko

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
gecko/: __init__.py  crawler.py  fetcher.py  parser.py  weaver.py
tests/: test_gecko.py
