[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webgecko"
version = "0.1.0"
description = "Fast, stealthy web scraping — HTTP fetching with TLS impersonation, HTML parsing, and concurrent crawling. No fluff."
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0",
    "cssselect>=1.4",
    "curl_cffi>=0.15",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpbin"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gecko*"]
